Changelog
=========


1.1.4 (unreleased)
------------------

- Extend the form to define the _blank attribute for each link. [elioschmutz]


1.1.3 (2019-08-15)
------------------

- Add possibility to define links without an icon.
  [tinagerber]


1.1.2 (2016-09-07)
------------------

- Do not show links to non-existent objects
  [raphael-s]


1.1.1 (2016-07-06)
------------------

- Remove obsolete css selector
  [Kevin Bieri]


1.1.0 (2016-06-27)
------------------

- Implement uninstall profile. [jone]

- Implement ftw.mobile button.
  [mathias.leimgruber]


1.0.0 (2016-04-14)
------------------

- Add browserlayer.
  [mathias.leimgruber]

- Initial implementation
  [jone]